<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="dot">.</string>
    <string name="clear">AC</string>
    <string name="percent">%</string>
    <string name="invert">+/-</string>
    <string name="light">Light/Dark Mode</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="euler">e</string>
    <string name="logn">ln</string>
    <string name="log">log</string>
    <string name="square">x<sup>2</sup></string>
    <string name="cube">x<sup>3</sup></string>
    <string name="power">x<sup>y</sup></string>
    <string name="sqrt"><sup>2&#8730;</sup>x</string>
    <string name="cbrt"><sup>3&#8730;</sup>x</string>
    <string name="xrt"><sup>x&#8730;</sup>y</string>
    <string name="fraction"><sup>1</sup>/<sub>x</sub></string>
    <string name="factorial">x!</string>
    <string name="random">Rand</string>

</resources>