<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:maxLines="1"
        app:autoSizeTextType="uniform"
        app:autoSizeMaxTextSize="75dp"
        android:textColor="@color/white"
        android:gravity="center|end"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/border"
        android:id="@+id/txtCalc"
        />

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/clear"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnClear"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/invert"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnInvert"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/percent"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnPercent"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/divide"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnDivide"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/seven"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnSeven"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/eight"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnEight"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/nine"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnNine"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/multiply"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnMultiply"/>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/four"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnFour"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/five"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnFive"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/six"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnSix"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/minus"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnMinus"/>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        >
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/one"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnOne"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/two"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnTwo"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/three"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnThree"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/plus"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnPlus"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        >
        <Button
            android:layout_weight="2.12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/zero"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnZero"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dot"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnDot"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/equal"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/btnEqual"/>
    </LinearLayout>

</LinearLayout>